--- a/weatherVk/News/NewsCellXib.xib
+++ b/weatherVk/News/NewsCellXib.xib
@@ -71,11 +71,25 @@
                             <constraint firstAttribute="trailing" secondItem="5Q0-s4-Fhb" secondAttribute="trailing" id="vhx-U9-oHS"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QD9-U8-kxV">
+                        <rect key="frame" x="333" y="468.5" width="11" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QpZ-uw-kZS">
+                        <rect key="frame" x="349" y="465.5" width="30" height="26.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="fWL-er-KpT"/>
+                            <constraint firstAttribute="height" constant="30" id="gpF-Hv-Sdq"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="5nJ-b9-vZL" firstAttribute="top" secondItem="e2b-Fd-Qjr" secondAttribute="bottom" constant="10" id="3xy-A0-JRm"/>
                     <constraint firstItem="TkL-9c-KXZ" firstAttribute="centerY" secondItem="5th-ap-e7w" secondAttribute="centerY" id="8Uz-xe-VlQ"/>
                     <constraint firstItem="G3R-XN-8T6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="BEF-WM-N3z"/>
+                    <constraint firstItem="QpZ-uw-kZS" firstAttribute="leading" secondItem="QD9-U8-kxV" secondAttribute="trailing" constant="5" id="ETE-fo-ucm"/>
                     <constraint firstItem="G3R-XN-8T6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="JIP-lt-8gA"/>
                     <constraint firstItem="5th-ap-e7w" firstAttribute="centerY" secondItem="5nJ-b9-vZL" secondAttribute="centerY" id="KPv-N6-m4L"/>
                     <constraint firstItem="5nJ-b9-vZL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="T3X-b6-vZD"/>
@@ -83,7 +97,10 @@
                     <constraint firstItem="5th-ap-e7w" firstAttribute="leading" secondItem="5nJ-b9-vZL" secondAttribute="trailing" constant="5" id="ZL9-oW-X84"/>
                     <constraint firstAttribute="trailing" secondItem="G3R-XN-8T6" secondAttribute="trailing" constant="10" id="ckR-ti-Vgd"/>
                     <constraint firstAttribute="trailing" secondItem="e2b-Fd-Qjr" secondAttribute="trailing" id="gqk-Oo-Gvd"/>
+                    <constraint firstAttribute="trailing" secondItem="QpZ-uw-kZS" secondAttribute="trailing" constant="5" id="hhv-og-rjz"/>
+                    <constraint firstItem="QD9-U8-kxV" firstAttribute="centerY" secondItem="5Q0-s4-Fhb" secondAttribute="centerY" id="jmM-HJ-9MB"/>
                     <constraint firstAttribute="bottom" secondItem="5nJ-b9-vZL" secondAttribute="bottom" constant="5" id="mwq-vg-ePL"/>
+                    <constraint firstItem="QpZ-uw-kZS" firstAttribute="centerY" secondItem="QD9-U8-kxV" secondAttribute="centerY" id="rue-dd-KdC"/>
                     <constraint firstItem="TkL-9c-KXZ" firstAttribute="leading" secondItem="5th-ap-e7w" secondAttribute="trailing" constant="15" id="wuF-pY-6tD"/>
                     <constraint firstItem="e2b-Fd-Qjr" firstAttribute="top" secondItem="G3R-XN-8T6" secondAttribute="bottom" constant="10" id="yrp-0r-Bah"/>
                 </constraints>
@@ -91,6 +108,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="counter" destination="5th-ap-e7w" id="VNk-AW-1jr"/>
+                <outlet property="counterViews" destination="QD9-U8-kxV" id="vQa-o2-EMn"/>
                 <outlet property="newsImageView" destination="e2b-Fd-Qjr" id="Gud-5Q-tOP"/>
                 <outlet property="newsLabel" destination="G3R-XN-8T6" id="tQO-Hm-0R3"/>
                 <outlet property="newsLike" destination="5nJ-b9-vZL" id="xPE-DW-ouz"/>
@@ -102,6 +120,7 @@
     </objects>
     <resources>
         <image name="arrowshape.turn.up.right" catalog="system" width="128" height="106"/>
+        <image name="eye" catalog="system" width="128" height="81"/>
         <image name="suit.heart" catalog="system" width="128" height="109"/>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
