--- a/weatherVk/Base.lproj/Main.storyboard
+++ b/weatherVk/Base.lproj/Main.storyboard
@@ -556,14 +556,14 @@
                                 <color key="separatorColor" red="0.01176470588" green="0.0" blue="0.4941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="comment" id="h7f-3b-H5k" customClass="CommentCell" customModule="weatherVk" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="30.666666030883789"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="31"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h7f-3b-H5k" id="2xE-CH-9EZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="428" height="30.666666030883789"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="31"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rww-bq-vCW">
-                                                    <rect key="frame" x="5" y="5" width="418" height="20.666666666666668"/>
+                                                    <rect key="frame" x="5" y="5" width="418" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -681,7 +681,7 @@
         <!--Groups-->
         <scene sceneID="56u-6c-SdA">
             <objects>
-                <navigationController id="XaZ-XR-YF9" sceneMemberID="viewController">
+                <navigationController id="XaZ-XR-YF9" customClass="CustomNavigationController" customModule="weatherVk" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Groups" image="person.3.fill" catalog="system" id="lU0-hX-vf7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="EFU-xs-zeT">
                         <rect key="frame" x="0.0" y="44" width="428" height="44"/>
@@ -718,7 +718,7 @@
         <!--News-->
         <scene sceneID="Kfw-OW-YjD">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TGA-2F-aOm" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TGA-2F-aOm" customClass="CustomNavigationController" customModule="weatherVk" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="News" image="rectangle.and.pencil.and.ellipsis" catalog="system" id="xLN-gu-AOt"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="233-ZM-Ndc">
